Agregando nuevos componentes y modificacion del program.cs

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -17,7 +17,7 @@
                     </span>
 
                     <button class="btn btn-outline-danger btn-sm" @onclick="Salir">
-                        Cerrar Sesión 🚪
+                        Cerrar Sesión <i class="bi bi-box-arrow-right"></i>
                     </button>
                 </Authorized>
                 <NotAuthorized>
