--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using SistemaAduanero.Web
 @using SistemaAduanero.Web.Components
 @using Microsoft.AspNetCore.Components.Authorization
+@using CurrieTechnologies.Razor.SweetAlert2
